--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Ibrahim AbdElwahab">
-  <title>نتيجة الفرقة الثانية - 2023/24</title>
+  <title>نتيجة الفرقة الثالثة - 2023/24</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
