--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       <h3 class="notes__title">تنبيهات هامة: </h3>
 
       <ul class="notes-list">
+        <li><a href="https://iabdwahab.me/darelom-first-degrees-2024/" target="_blank">ترتيب <b>الفرقة الأولى</b></a>.</li>
+        <li><a href="https://iabdwahab.me/darelom-second-degrees-2024/" target="_blank">ترتيب <b>الفرقة الثانية</b></a>.</li>
+        <li><a href="https://iabdwahab.me/darelom-fourth-degrees-2024/" target="_blank">ترتيب <b>الفرقة الرابعة</b></a>.</li>
         <li class="notes-list__item">تم حساب النتيجة على أن <b>جميع المواد داخل المجموع</b>، إذا كانت هناك مادة خارج المجموع <a href="https://forms.gle/PZmCjkwgCFhwX4Bf9" target="_blank"><b>أخبرنا</b></a>.</li>
         <li class="notes-list__item">نتائج المواد لا تظهر على الهاتف لصغر الحجم، بإمكانك رؤية نتائج المواد من خلال جهاز أكبر حجمًا، أو من خلال تطبيق ما في <a href="https://www.youtube.com/watch?v=GlgNc4LI4iI" target="_blank">هذا الفيديو</a>.</li>
         <li class="notes-list__item">للإبلاغ عن خطأ: <a href="https://forms.gle/PZmCjkwgCFhwX4Bf9" target="_blank">https://forms.gle/PZmCjkwgCFhwX4Bf9</a>.</li>
