--- a/index.html
+++ b/index.html
@@ -1,71 +1,115 @@
 <!DOCTYPE html>
 <html lang="en" dir="rtl">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Ibrahim AbdElwahab">
-  <title>نتيجة الفرقة الثالثة - 2023/24</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Ibrahim AbdElwahab" />
+    <title>نتيجة الفرقة الثالثة - 2023/24</title>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  <div class="container">
-    <h1 class="heading">
-      نتيجة الفرقة الثالثة - 2023/24
-    </h1>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="heading">نتيجة الفرقة الثالثة - 2023/24</h1>
 
-    <h2 class="author">تم بحمد الله بواسطة:  <br>إبراهيم عبد الوهاب [فرقة أولى].</h2>
+      <h2 class="author">
+        تم بحمد الله بواسطة: <br />إبراهيم عبد الوهاب [فرقة أولى].
+      </h2>
 
-    <!-- <p style="font-weight: bold;"><b style="color: green;">تواصل الأعمال (واتساب - تيليجرام): </b> 01280552925</p> -->
+      <!-- <p style="font-weight: bold;"><b style="color: green;">تواصل الأعمال (واتساب - تيليجرام): </b> 01280552925</p> -->
 
-    <div class="notes">
-      <!-- <h3 class="notes__title">إعلامات بشأن المراسلات: </h3> -->
+      <div class="notes">
+        <h3 class="notes__title">إعلامات بشأن المراسلات:</h3>
+        <ul>
+          <li>
+            تم ترتيب النتائج بواسطة أحد طلاب الكلية، و<b>الكلية غير مسئولة</b>
+            عن هذا الموقع.
+          </li>
+          <li>لتقديم الالتماسات <b>يرجى مراجعة شئون الطلاب</b>.</li>
+        </ul>
+      </div>
 
+      <div class="notes">
+        <h3 class="notes__title">تنبيهات هامة:</h3>
+
+        <ul class="notes-list">
+          <li>
+            <a
+              href="https://iabdwahab.me/darelom-first-degrees-2024/"
+              target="_blank"
+              >ترتيب <b>الفرقة الأولى</b></a
+            >.
+          </li>
+          <li>
+            <a
+              href="https://iabdwahab.me/darelom-second-degrees-2024/"
+              target="_blank"
+              >ترتيب <b>الفرقة الثانية</b></a
+            >.
+          </li>
+          <li>
+            <a
+              href="https://iabdwahab.me/darelom-fourth-degrees-2024/"
+              target="_blank"
+              >ترتيب <b>الفرقة الرابعة</b></a
+            >.
+          </li>
+          <li class="notes-list__item">
+            تم حساب النتيجة على أن <b>جميع المواد داخل المجموع</b>، إذا كانت
+            هناك مادة خارج المجموع
+            <a href="https://forms.gle/PZmCjkwgCFhwX4Bf9" target="_blank"
+              ><b>أخبرنا</b></a
+            >.
+          </li>
+          <li class="notes-list__item">
+            نتائج المواد لا تظهر على الهاتف لصغر الحجم، بإمكانك رؤية نتائج
+            المواد من خلال جهاز أكبر حجمًا، أو من خلال تطبيق ما في
+            <a
+              href="https://www.youtube.com/watch?v=GlgNc4LI4iI"
+              target="_blank"
+              >هذا الفيديو</a
+            >.
+          </li>
+          <li class="notes-list__item">
+            للإبلاغ عن خطأ:
+            <a href="https://forms.gle/PZmCjkwgCFhwX4Bf9" target="_blank"
+              >https://forms.gle/PZmCjkwgCFhwX4Bf9</a
+            >.
+          </li>
+        </ul>
+      </div>
+
+      <table class="table">
+        <tr class="info-tr">
+          <th class="order-el">الترتيب</th>
+          <th class="id-el">رقم الجلوس</th>
+          <th class="name-el">الاسم</th>
+          <th class="term-2">عبري / فارسي</th>
+          <th class="term-1 out-degree">إنجليزي</th>
+          <th class="term-2">قاعة بحث</th>
+          <th class="term-2">نحو 3</th>
+          <th class="term-1">صرف وعروض 2</th>
+          <th class="term-1">أدب عباسي</th>
+          <th class="term-1">نصوص أدبية</th>
+          <th class="term-1">علم الدلالة وعلم اللغة الحاسوبي</th>
+          <th class="term-2">أدب مقارن</th>
+          <th class="term-1">علوم القرآن والسنة</th>
+          <th class="term-2">تفسير وحديث</th>
+          <th class="term-2">علم الكلام</th>
+          <th class="term-2">تاريخ مصر</th>
+          <th class="term-1">تدريبات أدبية</th>
+          <th class="total-el">الإجمالي</th>
+          <th class="percentage-el">النسبة</th>
+        </tr>
+      </table>
     </div>
 
-    <div class="notes">
-      <h3 class="notes__title">تنبيهات هامة: </h3>
-
-      <ul class="notes-list">
-        <li><a href="https://iabdwahab.me/darelom-first-degrees-2024/" target="_blank">ترتيب <b>الفرقة الأولى</b></a>.</li>
-        <li><a href="https://iabdwahab.me/darelom-second-degrees-2024/" target="_blank">ترتيب <b>الفرقة الثانية</b></a>.</li>
-        <li><a href="https://iabdwahab.me/darelom-fourth-degrees-2024/" target="_blank">ترتيب <b>الفرقة الرابعة</b></a>.</li>
-        <li class="notes-list__item">تم حساب النتيجة على أن <b>جميع المواد داخل المجموع</b>، إذا كانت هناك مادة خارج المجموع <a href="https://forms.gle/PZmCjkwgCFhwX4Bf9" target="_blank"><b>أخبرنا</b></a>.</li>
-        <li class="notes-list__item">نتائج المواد لا تظهر على الهاتف لصغر الحجم، بإمكانك رؤية نتائج المواد من خلال جهاز أكبر حجمًا، أو من خلال تطبيق ما في <a href="https://www.youtube.com/watch?v=GlgNc4LI4iI" target="_blank">هذا الفيديو</a>.</li>
-        <li class="notes-list__item">للإبلاغ عن خطأ: <a href="https://forms.gle/PZmCjkwgCFhwX4Bf9" target="_blank">https://forms.gle/PZmCjkwgCFhwX4Bf9</a>.</li>
-      </ul>
-    </div>
-
-    <table class="table">
-      <tr class="info-tr">
-        <th class="order-el">الترتيب</th>
-        <th class="id-el">رقم الجلوس</th>
-        <th class="name-el">الاسم</th>
-        <th class="term-2">عبري / فارسي</th>
-        <th class="term-1 out-degree">إنجليزي</th>
-        <th class="term-2">قاعة بحث</th>
-        <th class="term-2">نحو 3</th>
-        <th class="term-1">صرف وعروض 2</th>
-        <th class="term-1">أدب عباسي</th>
-        <th class="term-1">نصوص أدبية</th>
-        <th class="term-1">علم الدلالة وعلم اللغة الحاسوبي</th>
-        <th class="term-2">أدب مقارن</th>
-        <th class="term-1">علوم القرآن والسنة</th>
-        <th class="term-2">تفسير وحديث</th>
-        <th class="term-2">علم الكلام</th>
-        <th class="term-2">تاريخ مصر</th>
-        <th class="term-1">تدريبات أدبية</th>
-        <th class="total-el">الإجمالي</th>
-        <th class="percentage-el">النسبة</th>
-      </tr>
-
-    </table>
-
-  </div>
-
-  <script src="js/script.js"></script>
-</body>
+    <script src="js/script.js"></script>
+  </body>
 </html>
